<resources>
    <string name="app_name">ShaGift</string>
    <string name="like">Like</string>
    <string name="favorite">Favorite</string>

    <string name="comment">Comment</string>
    <string name="feedback">Feedbacks</string>
    <string name="favorites">Add to Favorites</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="description">Desc</string>

    <string name="abc_an_amazing_alphabet_book">ABC: An Amazing Alphabet Book!</string>
    <string name="now">now</string>
    <string name="test">A scarf, plural scarves, is a piece of fabric worn around the neck for warmth, sun protection, cleanliness, fashion, or religious reasons. They can be made in a variety of different materials such as wool, cashmere, linen or cotton. It is a common type of neckwear.  </string>
    <string name="ok">GOT IT</string>
    <string name="skip">Skip</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_register">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_Name">Name</string>

    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="send">Send</string>
    <string name="new_postname">Type the Name here</string>
    <string name="new_postdesc">Type the Description here</string>
    <string name="new_attach">attach</string>
    <string name="new_capture">capture</string>
    <string name="new_send">Post</string>
    <string name="new_gallery">Gallery</string>
    <string name="resume">resume</string>
    <string name="title_activity_comments">CommentsActivity</string>
</resources>

