<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".DetailGiftPostActivity">

    <ImageView
        android:id="@+id/feed_post_profile_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/feed_post_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/feed_post_profile_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_name" />

    <TextView
        android:id="@+id/detail_post_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/feed_post_profile_img"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detail_post_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/detail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_post_profile_img"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/test"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_post_img" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_favorite_black_18dp"
            android:focusable="false"
            android:padding="5dp"
            android:text="@string/favorites" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_chat_black_18dp"
            android:focusable="false"
            android:padding="5dp"
            android:text="@string/feedback" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_share_black_18dp"
            android:focusable="false"
            android:padding="5dp"
            android:text="@string/share" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>